--- a/DecptAI-html/index.html
+++ b/DecptAI-html/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>多人对话游戏</title>
+    <title>DeceptAI</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>多人对话游戏</h1>
+    <h1>DeceptAI</h1>
     <div id="chat-box">
         <div id="messages"></div>
         <div class="input-group">
